Added Reactive Extensions for FileWatching 'throttling' (using Sample) Added async/await to tail loading to free UI thread Upgraded to .NET 451 to support async/await Cleaned up namespaces

--- a/Laan.Tools.Tail.Wpf/Views/ErrorView.xaml
+++ b/Laan.Tools.Tail.Wpf/Views/ErrorView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Laan.Tools.Tail.Win.Views.ErrorView"
+﻿<Window x:Class="Laan.Tools.Tail.Views.ErrorView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Error" Height="300" Width="300">
