--- a/Laan.Tools.Tail.Wpf/App.xaml
+++ b/Laan.Tools.Tail.Wpf/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application 
-    x:Class="Laan.Tools.Tail.Win.App"
+    x:Class="Laan.Tools.Tail.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Laan.Tools.Tail.Win"
+    xmlns:local="clr-namespace:Laan.Tools.Tail"
 >
     <Application.Resources>
         <ResourceDictionary>
